* screen_play: repaint after the "select-playing" command
* screen_text: start searching at window origin, not bottom
* strfsong: support multiple values for a tag
* screen_browser: different colors for directories and playlists
* screen_browser: display song duration
* screen_queue: move ranges with one single "move" command
* status_bar: fix display_remaining_time while seeking


ncmpc 0.15 - 2009-09-24
* added the "lyrics-autosave" option
* added CMD_SELECT_PLAYING
* display song duration in the playlist
* added the "hardware_cursor" option
* show plugin error messages on the screen
* fixed NULL pointer dereference when not yet connected
* new translation: Hebrew


ncmpc 0.14 - 2009-04-21
  * bell on wrapped search (optionally)
  * added new "jump" ('.') command, which queries the user for a string and
    jumps to the entry which begins with that string while the user is typing.
  * added new "select range" ('v') command, which lets the user perform various
    actions (e.g. add to playlist, delete, move, shuffle) on ranges of songs
  * added commands ('H', 'M', 'L') to jump to top, middle, and bottom of screen
  * added scrolling commands ('^B', '^N', 'B', 'N') to scroll up/down one line
    or up/down half a screen
  * added screen swap ('`') command to switch to the most recently used screen
  * added MPD information and currently playing song to the info screen ('i')
  * support for new MPD 0.15 modes: single ('y'), consume ('C')
  * added "scroll-offset" option
  * new translations: Czech, Simplified Chinese, Korean, Ukrainian, Dutch


ncmpc 0.13 - 2009-01-09
  * added output configuration screen, default hotkey F8
  * new --disable-locale configure option
  * new --disable-multibyte configure option; this allows you to
    disable wide character support, retaining multibyte character
    support
  * search with regular expressions


ncmpc 0.12 - 2008-12-05
  * added artist screen (tag browser)